plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id "com.diffplug.spotless" version "6.25.0"
}

group = 'io.flipt'
// x-release-please-start-version
version = '1.1.1'
// x-release-please-end
description = 'Flipt Server SDK'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    withSourcesJar()
    withJavadocJar()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    testImplementation platform('org.junit:junit-bom:5.11.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.0'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.18.0'
}

spotless {
    java {
        importOrder()

        removeUnusedImports()

        cleanthat()

        googleJavaFormat()

        formatAnnotations()
    }
}

tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}

test {
    useJUnitPlatform()
}



publishing {
    publications {
        maven(MavenPublication) {
            artifactId = 'flipt-java'
            from components.java

            pom {
                name = 'Flipt Java SDK'
                description = 'Flipt Java SDK'
                url = 'https://github.com/flipt-io/flipt-server-sdks/tree/main/flipt-java'

                licenses {
                    license {
                        name = 'MIT'
                        url = 'https://opensource.org/license/mit/'
                    }
                }

                developers {
                    developer {
                        id = 'flipt-io'
                        name = 'Flipt'
                        email = 'devs@flipt.io'
                    }
                }

                scm {
                    connection = 'scm:git:git://github.com/flipt-io/flipt-server-sdks.git'
                    developerConnection = 'scm:git:ssh://github.com/flipt-io/flipt-server-sdks.git'
                    url = 'https://github.com/flipt-io/flipt-server-sdks/tree/main/flipt-java'
                }
            }
        }
    }
    repositories {
        maven {
            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            credentials {
                username "$System.env.MAVEN_USERNAME"
                password "$System.env.MAVEN_PASSWORD"
            }
        }
    }
}

signing {
    def signingKey = System.getenv('PGP_PRIVATE_KEY')
    def signingPassphrase = System.getenv('PGP_PASSPHRASE')
    useInMemoryPgpKeys(signingKey, signingPassphrase)
    sign publishing.publications.maven
}
